       NEW: Automatic I/Q phase and gain correction (requires gr-iqbal).
       NEW: Qt 5 support.
       NEW: GNU Radio 3.7 support.
       NEW: HackRF Jawbreaker support.
       NEW: Option to select antenna connector on e.g. USRP devices.
     FIXED: Frequency control widget with recent Qt was broken.
     FIXED: Bug that caused audio FFT data to be leaked into the I/Q FFT.
  IMPROVED: Y-axis panning (click-and-drag).
  IMPROVED: Rescale waterfall when resizing the main window.
  IMPROVED: gr-audio support on Linux.
  IMPROVED: Audio gain setting no longer has impact on WAV recording.


   2.1.251  Released on March 1, 2013

     FIXED: Incorrect device selection in config dialog.


   2.1.246  Released on February 29, 2013

       NEW: I/Q swapping option.
       NEW: FFT video filter with non-linear gain (still WIP).
       NEW: Save and restore FFT settings.
       NEW: Save and restore receiver options (offset, mode and squelch level).
       NEW: AM DC removal using IIR filter.
     FIXED: Removed graphics redraw delay when changing frequency or demodulator.
     FIXED: Respect RF frequency range of input device.
     FIXED: Added workaround for pixel error introduced in Qt 4.8.
     FIXED: Crash when FFT size is smaller than plot width.
     FIXED: Show correct initial filter preset in filter selector.
     FIXED: Workaround for 'jerky streaming' when DSP is started using rtlsdr.
     FIXED: Freeze when channel filter becomes too narrow in AM and FM modes.
     FIXED: Crash when changing sample rate of the current input device.
   CHANGED: Show device ID (e.g. rtl=0) in title bar instead of description.
  IMPROVED: AGC settings moved to dialog window.
  IMPROVED: Increase LO resolution to 1 Hz.
  IMPROVED: GUI layout fixes for Mac OS X.
  IMPROVED: Shortcuts for resetting and re-centering FFT plot after zooming.
  IMPROVED: Crash recovery in case of bad config file.
  IMPROVED: Support 50 fps FFT rate and allow disabling FFT.
  IMPROVED: I/Q DC canceling.
